Allow PID file to be disabled at compile-time
Stubby unconditionally attempts to write a PID file under the run state
directory when it starts, but this directory is not always writeable by
non-root or non-system account users (e.g. on Slackware). To aid with
running Stubby in environments where the PID file would otherwise be
unwriteable or unnecessary, allow it to be disabled at compile-time with
the `ENABLE_PID_FILE` option (which remains on by default).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,10 @@ find_package(Libsystemd)
 if (Libsystemd_FOUND)
   option(ENABLE_SYSTEMD "Enable systemd support." ON)
 endif()
+option(ENABLE_PID_FILE "Enable PID file support." ON)
+if (ENABLE_PID_FILE)
+  add_compile_definitions(-DENABLE_PID_FILE)
+endif ()
 option(ENABLE_GETDNS_STATIC_LINK "Link GetDNS statically." ON)
 if (ENABLE_GETDNS_STATIC_LINK)
   set(GETDNS_STATIC ON)
