Log to syslog when running in background
Log messages are unconditionally written to stderr, and are therefore
lost after the fork when running in the background (`-g`). If syslog
support is detected at compile time, and provided we're not on a
platform for which an alternative non-stderr logging facility is
provided (i.e. Windows), send log messages to syslog when running in the
background.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,10 @@ set(SERVER_DEBUG ${ENABLE_DEBUG_SERVER})
 
 
 check_symbol_exists(getopt "unistd.h" HAVE_GETOPT)
+check_symbol_exists(vsyslog "syslog.h" HAVE_VSYSLOG)
+if (HAVE_VSYSLOG)
+  add_compile_definitions(-DHAVE_VSYSLOG)
+endif ()
 
 # Does the compiler accept the "format" attribute?
 try_compile(HAVE_ATTR_FORMAT
